tdf#77786 Replace format: Replace current found string and not next one

Move the check for an empty replacement string with replacement attributes from SwView::ExecSearch (case REPLACE) to SwView::Replace.

Change-Id: I24bcd485967230cae31e42197ebb7f5d40f8bf6d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187774
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins